// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Link Link Placement 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 0.25rem;
  color: #1552DD;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0.25rem solid rgba(84,94,255,0);
  opacity: 1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  pointer-events: default;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.00625rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3:hover {
  color: #1B214F;
}

.emotion-3:hover path {
  fill: #1B214F;
}

.emotion-3:visited {
  color: #6c28cc;
}

.emotion-3:visited path {
  fill: #6c28cc;
}

.emotion-3:focus-visible {
  border: 0.25rem solid #9347ff;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  color: #1552DD;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0.25rem solid rgba(84,94,255,0);
  opacity: 1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  pointer-events: default;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.00625rem;
}

.emotion-4:hover {
  color: #1B214F;
}

.emotion-4:hover path {
  fill: #1B214F;
}

.emotion-4:visited {
  color: #6c28cc;
}

.emotion-4:visited path {
  fill: #6c28cc;
}

.emotion-4:focus-visible {
  border: 0.25rem solid #9347ff;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          This is an
           
          <a
            className="emotion-3"
            data-testid="_link"
            href="#"
          >
            <span>
              inline Link
            </span>
          </a>
          .
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          This is a
          <a
            className="emotion-4"
            data-testid="_link"
            href="#"
          >
            <span>
              block Link
            </span>
          </a>
          .
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Link Link Sizes 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  color: #1552DD;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0.25rem solid rgba(84,94,255,0);
  opacity: 1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  pointer-events: default;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.00625rem;
}

.emotion-3:hover {
  color: #1B214F;
}

.emotion-3:hover path {
  fill: #1B214F;
}

.emotion-3:visited {
  color: #6c28cc;
}

.emotion-3:visited path {
  fill: #6c28cc;
}

.emotion-3:focus-visible {
  border: 0.25rem solid #9347ff;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  color: #1552DD;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0.25rem solid rgba(84,94,255,0);
  opacity: 1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  pointer-events: default;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-4:hover {
  color: #1B214F;
}

.emotion-4:hover path {
  fill: #1B214F;
}

.emotion-4:visited {
  color: #6c28cc;
}

.emotion-4:visited path {
  fill: #6c28cc;
}

.emotion-4:focus-visible {
  border: 0.25rem solid #9347ff;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  color: #1552DD;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0.25rem solid rgba(84,94,255,0);
  opacity: 1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  pointer-events: default;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-5:hover {
  color: #1B214F;
}

.emotion-5:hover path {
  fill: #1B214F;
}

.emotion-5:visited {
  color: #6c28cc;
}

.emotion-5:visited path {
  fill: #6c28cc;
}

.emotion-5:focus-visible {
  border: 0.25rem solid #9347ff;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <a
          className="emotion-3"
          data-testid="_link"
          href="#"
        >
          <span>
            Size 1
          </span>
        </a>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <a
          className="emotion-4"
          data-testid="_link"
          href="#"
        >
          <span>
            Size 2
          </span>
        </a>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <a
          className="emotion-5"
          data-testid="_link"
          href="#"
        >
          <span>
            Size 3
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Link Link Styles 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  color: #1552DD;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0.25rem solid rgba(84,94,255,0);
  opacity: 1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  pointer-events: default;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.00625rem;
}

.emotion-3:hover {
  color: #1B214F;
}

.emotion-3:hover path {
  fill: #1B214F;
}

.emotion-3:visited {
  color: #6c28cc;
}

.emotion-3:visited path {
  fill: #6c28cc;
}

.emotion-3:focus-visible {
  border: 0.25rem solid #9347ff;
}

.emotion-4 {
  background: #1B214F;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  color: #1de9b6;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0.25rem solid rgba(84,94,255,0);
  opacity: 1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  pointer-events: default;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.00625rem;
}

.emotion-5:hover {
  color: #ffffff;
}

.emotion-5:hover path {
  fill: #ffffff;
}

.emotion-5:visited {
  color: #dbc1ff;
}

.emotion-5:visited path {
  fill: #dbc1ff;
}

.emotion-5:focus-visible {
  border: 0.25rem solid #9347ff;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <a
          className="emotion-3"
          data-testid="_link"
          href="#"
        >
          <span>
            Primary
          </span>
        </a>
      </div>
    </div>
    <div
      className="emotion-4"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <a
          className="emotion-5"
          data-testid="_link"
          href="#"
        >
          <span>
            Inverted
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Link Link with Icon 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  color: #1552DD;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0.25rem solid rgba(84,94,255,0);
  opacity: 1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  pointer-events: default;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.00625rem;
}

.emotion-3:hover {
  color: #1B214F;
}

.emotion-3:hover path {
  fill: #1B214F;
}

.emotion-3:visited {
  color: #6c28cc;
}

.emotion-3:visited path {
  fill: #6c28cc;
}

.emotion-3:focus-visible {
  border: 0.25rem solid #9347ff;
}

.emotion-4 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  fill: #1552DD;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-5 path {
  fill: #1552DD;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  color: #1552DD;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0.25rem solid rgba(84,94,255,0);
  opacity: 1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  pointer-events: default;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-6:hover {
  color: #1B214F;
}

.emotion-6:hover path {
  fill: #1B214F;
}

.emotion-6:visited {
  color: #6c28cc;
}

.emotion-6:visited path {
  fill: #6c28cc;
}

.emotion-6:focus-visible {
  border: 0.25rem solid #9347ff;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  color: #1552DD;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0.25rem solid rgba(84,94,255,0);
  opacity: 1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  pointer-events: default;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-9:hover {
  color: #1B214F;
}

.emotion-9:hover path {
  fill: #1B214F;
}

.emotion-9:visited {
  color: #6c28cc;
}

.emotion-9:visited path {
  fill: #6c28cc;
}

.emotion-9:focus-visible {
  border: 0.25rem solid #9347ff;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <a
          className="emotion-3"
          data-testid="_link"
          href="#"
        >
          <span>
            Link
          </span>
          <span
            className="emotion-4"
            data-testid="_link_icon"
            onClick={[Function]}
          >
            <span
              className="emotion-5"
            />
          </span>
        </a>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <a
          className="emotion-6"
          data-testid="_link"
          href="#"
        >
          <span>
            Link
          </span>
          <span
            className="emotion-4"
            data-testid="_link_icon"
            onClick={[Function]}
          >
            <span
              className="emotion-5"
            />
          </span>
        </a>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <a
          className="emotion-9"
          data-testid="_link"
          href="#"
        >
          <span>
            Link
          </span>
          <span
            className="emotion-4"
            data-testid="_link_icon"
            onClick={[Function]}
          >
            <span
              className="emotion-5"
            />
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Link Overview 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  margin: -16px;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #1B214F;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <p
        className="emotion-3"
        id="a-link-is-a-navigational-component-that-takes-a-user-to-another-url,-an-element-within-the-page,-or-a-file."
      >
        A link is a navigational component that takes a user to another URL, an element within the page, or a file.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Link Playground 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  color: #1552DD;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0.25rem solid rgba(84,94,255,0);
  opacity: 1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  pointer-events: default;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.00625rem;
}

.emotion-3:hover {
  color: #1B214F;
}

.emotion-3:hover path {
  fill: #1B214F;
}

.emotion-3:visited {
  color: #6c28cc;
}

.emotion-3:visited path {
  fill: #6c28cc;
}

.emotion-3:focus-visible {
  border: 0.25rem solid #9347ff;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <a
          className="emotion-3"
          data-testid="_link"
          href="#"
        >
          <span>
            Link
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;
